<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">RemindMe</string>
    <string name="button_viewEvents">View Events</string>
    <string name="button_viewCategories">View Categories</string>
    <string name="button_createEvent">Create Event</string>
    <string name="logo">Project Logo</string>
    <string name="Name_label">Name</string>
    <string name="Description_label">Description</string>
    <string name="Location_label">Location</string>
    <string name="Category_label">Category</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string-array name="Frequency_type">
        <item>Mins</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Years</item>
    </string-array>
    <string-array name="Reminder_type">
        <item>0 min</item>
        <item>5 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hr</item>
        <item>2 hr</item>
        <item>6 hr</item>
        <item>1 day</item>
        <item>1 week</item>
    </string-array>
    <string name="create_new">Create New Event</string>
    <string name="button_date">Select Event Date</string>
    <string name="button_time">Select Event Time</string>
    <string name="frequency">Frequency:</string>
    <string name="reminder">Event Reminder:</string>
    <string name="default_freq">Enter \'0\' for one time events</string>
</resources>
