<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.coop.remindme.FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1" >

                        <Button
                            android:id="@+id/button_viewEvents"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/button_viewEvents" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow02"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1" >

                        <Button
                            android:id="@+id/button_viewCategories"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/button_viewCategories" />
                    </TableRow>
                </TableLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/ic_lock_idle_alarm" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button_createEvent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_createEvent" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</FrameLayout>
